2004-03-02  Bryan Forbes  <mxpxfifws@yahoo.com>

	* gtk/src/toolbar.[hg|ccg]: removed old STL-stlye API (deprecated and 
	can't co-exist with new API).
	* gtk/gtkmm/toolbar_elements.[h|cc]: removed these files to get rid of 
	all old API for Gtk::Toolbar.
	* gtk/gtkmm/Makefile.am: removed toolbar_elements.[h|cc] from list of 
	files to build, because it is only needed by the old STL-style Toolbar
	API.

2004-03-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/radiobutton.hg, radiomenuitem.hg: Commented-out
	the new group_changed signals until their declarations
	are fixed in GTK+ - patch submitted.

2004-03-03  Murray Cumming  <murrayc@murrayc.com>

	* pango/src/pango_methods.defs: Updated with h2defs.py.
	* pango/fontface.[hg|ccg]: Added list_sizes().
	* pango/attriter.[hg|ccg]: Added get_attrs().
	* pango/fontfamily.hg: Added is_monospace().
	* pango/fontset.[hg|ccg]: Added foreach().
	* pango/language.hg: Added includes_script().
	* pango/layout: Added set/get_auto_dir().

2004-03-02  Murray Cumming  <murrayc@murrayc.com>

	* Updated gtk/src/gtk_signals.defs with tools/extra_defs_gen.
	* gtk/src/cellrendererpixbuf.hg: Wrapped several new properties.

2004-03-02  Murray Cumming  <murrayc@murrayc.com>

	* New GTK+ API wrapped:
	* FileChooser: Added set/get_use_preview_label() and use_preview_label
	property.
	* Entry: Added set/get_alignment().
	* ComboBox: Added popup() and popdown().
	* Scale: Added get_layout() and get_layout_offsets().
	* Widget: Added add_mnemonic_labels(), remove_mnemonic_label(), and
	list_mnemonic_labels().
	* ComboBoxEntry: Added a set_text_column() overload that takes a
	ModelColumnBase instead of an int.
	* Added ComboBoxEntryText, like ComboBoxText, as an equivalent for
	gtk_combo_box_entry_new_text().
	* RadioButton, RadioMenuItem: Added group_changed signals.
	* Widget: Added draw_insertion_cursor() as wrapper for 
	gtk_draw_insertion_cursor, which has a GtkWidget as the first 
	parameter.