@@ -40,14 +40,50 @@
 namespace Gtk
 {
 
+void Toolbar::insert(ToolButton& item, int pos, const sigc::slot<void>& clicked_slot)
+{
+  item.signal_clicked().connect(clicked_slot);
+  gtk_toolbar_insert(gobj(), (GtkToolItem*)((item).gobj()), pos);
+}
+
+void Toolbar::insert(ToggleToolButton& item, int pos, const sigc::slot<void>& toggled_slot)
+{
+  item.signal_toggled().connect(toggled_slot);
+  gtk_toolbar_insert(gobj(), (GtkToolItem*)((item).gobj()), pos);
+}
+
 void Toolbar::append(ToolItem& item)
 {
   gtk_toolbar_insert(gobj(), (item).gobj(), -1 /* See GTK+ docs */);
 }
 
+void Toolbar::append(ToolButton& item, const sigc::slot<void>& clicked_slot)
+{
+  item.signal_clicked().connect(clicked_slot);
+  gtk_toolbar_insert(gobj(), (GtkToolItem*)((item).gobj()), -1 /* See GTK+ docs */);
+}
+
+void Toolbar::append(ToggleToolButton& item, const sigc::slot<void>& toggled_slot)
+{
+  item.signal_toggled().connect(toggled_slot);
+  gtk_toolbar_insert(gobj(), (GtkToolItem*)((item).gobj()), -1 /* See GTK+ docs */);
+}
+
 void Toolbar::prepend(ToolItem& item)
 {
   gtk_toolbar_insert(gobj(), (item).gobj(), 0 /* See GTK+ docs */);
+}
+
+void Toolbar::prepend(ToolButton& item, const sigc::slot<void>& clicked_slot)
+{
+  item.signal_clicked().connect(clicked_slot);
+  gtk_toolbar_insert(gobj(), (GtkToolItem*)((item).gobj()), 0 /* See GTK+ docs */);
+}
+
+void Toolbar::prepend(ToggleToolButton& item, const sigc::slot<void>& toggled_slot)
+{
+  item.signal_toggled().connect(toggled_slot);
+  gtk_toolbar_insert(gobj(), (GtkToolItem*)((item).gobj()), 0 /* See GTK+ docs */);
 }
 
 void Toolbar::unset_drop_highlight_item()
