@@ -18,6 +18,8 @@
  */
 
 #include <gtkmm/toolitem.h>
+#include <gtkmm/toolbutton.h>
+#include <gtkmm/toggletoolbutton.h>
 #include <glibmm/helperlist.h>
 #include <gtkmm/container.h>
 #include <gtkmm/stockid.h>
@@ -41,12 +43,19 @@ class Toolbar : public Container
 public:
   _CTOR_DEFAULT()
 
-  //TODO: Add sigc::slot<> parameter as well?
   _WRAP_METHOD(void insert(ToolItem& item, int pos), gtk_toolbar_insert)
-  void append(ToolItem& item);
-  void prepend(ToolItem& item);
+  void insert(ToolButton& item, int pos, const sigc::slot<void>& clicked_slot);
+  void insert(ToggleToolButton& item, int pos, const sigc::slot<void>& toggled_slot);
   
-  _WRAP_METHOD(int get_item_index(const ToolItem& item), gtk_toolbar_get_item_index)
+  void append(ToolItem& item);
+  void append(ToolButton& item, const sigc::slot<void>& clicked_slot);
+  void append(ToggleToolButton& item, const sigc::slot<void>& toggled_slot);
+  
+  void prepend(ToolItem& item);
+  void prepend(ToolButton& item, const sigc::slot<void>& clicked_slot);
+  void prepend(ToggleToolButton& item, const sigc::slot<void>& toggled_slot);
+  
+  _WRAP_METHOD(int get_item_index(const ToolItem& item) const, gtk_toolbar_get_item_index)
   _WRAP_METHOD(int get_n_items() const, gtk_toolbar_get_n_items)
   _WRAP_METHOD(ToolItem* get_nth_item(int n), gtk_toolbar_get_nth_item)
   _WRAP_METHOD(const ToolItem* get_nth_item(int n) const, gtk_toolbar_get_nth_item)
