@@ -1,3 +1,11 @@
+2004-03-03  Bryan Forbes  <mxpxfifws@yahoo.com>
+
+	* gtk/src/toolbar.[hg|ccg]: added methods to append, prepend, and 
+	insert with a sigc::slot.
+	* examples/stock/stock.cc: use new append method to append with a slot;
+	added a toggle button to prove that there are no ambiguity problems 
+	with the new methods.
+
 2004-03-02  Bryan Forbes  <mxpxfifws@yahoo.com>
 
 	* gtk/src/toolbar.[hg|ccg]: removed old STL-stlye API (deprecated and 
